# LinkedIn-Easy-Apply-Bot

./: .gitignore  .gitmodules  CompanyRating.py  README.md  config.yaml  config_template.yaml  easyapplybot.py  easyapplybot_Premium.py  exception_resistant_easyapplybot.bat  fileName  loginGUI.py  login_v06.py  out.csv  pyproject.toml  qa.csv  quickstart.py  requirements.txt  shell.nix  states.json  test.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
application/: __init__.py  application.py
tests/: conftest.py  test_validation.py
